fix input message on mobile

--- a/public/assets/mensagem.css
+++ b/public/assets/mensagem.css
@@ -27,13 +27,6 @@ body {
     background: #F1F0F5;
 }
 
-@media screen and (max-width: 360px) {
-    #frame {
-        width: 100%;
-        height: 100vh;
-    }
-}
-
 #frame #sidepanel {
     float: left;
     min-width: 280px;
